--- a/style.css
+++ b/style.css
@@ -57,7 +57,9 @@ img{
     width: 409px;
     margin-top: 20px;
 }
-.name-info .title-summary p{
+.name-info .title-summary p,
+.title-experience p,
+.title-education p, .date{
     font-family: 'tex_gyre_adventorregular';
     text-transform: uppercase;
     font-size: 18px;
@@ -65,8 +67,9 @@ img{
     color: #97969b;
     padding-left: 15px;
 }
-.name-info p, .name-info li{
-    font-family: 'Maven Pro';
+.name-info p, .name-info li, .description,
+.education li{
+    font-family: 'Maven Pro', arial, sans-serif;
     font-size: 16px;
     color: #776667;
     margin-top: 15px;
@@ -99,5 +102,52 @@ img{
     padding-top: 15px;
 }
 .experience-container{
-
+width: 100%;
+height: 700px;
+background-color: #dedde2;
+display: flex;
+}
+.experience{
+    width: 530px;
+    padding-left: 80px;
+}
+.title-experience, .title-education{
+    background-color: #e5d3d0;
+    height: 30px;
+    width: 180px;
+    margin-top: 30px;   
+}
+.title-experience hr,
+.title-education hr{
+    width: 100%;
+    size: 1px;
+    color: #c6c6c8;
+}
+.education{
+    margin-left: 105px;
+    margin-right: 40px;
+    width: 270px;
+}
+.title-education hr{
+    width: 70%;
+}
+article{
+    margin-left: 20px;
+}
+.company{
+    font-family: 'Maven Pro';
+    font-size: 18px;
+    color: #776667;
+    margin-top: 40px;
+}
+.education img{
+    width: 20px;
+    position: relative;
+    top:6px;
+    left: -9px;
+}
+.education li{
+    list-style: none;
+   padding-left: 15px;
+    line-height: 2;
 }
